--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	</head>
 
-	<body>
+	<body id="page-top">
 		<!-- Navigation -->
 		<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
@@ -43,7 +43,9 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand page-scroll" href="#page-top">Quanta Laboratories</a>
+				<a class="navbar-brand page-scroll" href="#page-top">
+					<img src="img/Complete Logo.gif" class="img-responsive" style="max-width:200px;margin-top: -20px">
+				</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
