--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
 			body {
 				padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 			}
-
-			div{
+	
+			#slides,
+			.slidesjs-navigation,
+			.slidesjs-pagination{
+				display:none;
 			}
 		</style>
 		<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 		<link href="css/agency.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
-
-
 
 		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
@@ -77,9 +78,13 @@
 		<header>
 		<div class="container">
 			<div class="intro-text">
-				<div class="intro-lead-in">Welcome To Quanta!</div>
-				<div class="intro-heading">It's Nice To Meet You</div>
-				<a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+				<div id="slides">
+					<img src="img/Big1.jpg">
+					<img src="img/BigB1.jpg">
+					<img src="img/BigB2.jpg">
+					<img src="img/BigB3.jpg">
+					<img src="img/BigB4.jpg">
+				</div>	
 			</div>
 		</div>
 		</header>
@@ -195,5 +200,10 @@
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 		<script src="js/classie.js"></script>
 		<script src="js/cbpAnimatedHeader.js"></script>
+
+		<!--Slide show-->
+		<script src="js/jquery.slides.min.js"></script>
+		<script src="js/slideSetting.js"></script>
+		
 	</body>
 </html>
