--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			body {
 				padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 			}
-	
+
 			#slides,
 			.slidesjs-navigation,
 			.slidesjs-pagination{
@@ -79,11 +79,11 @@
 		<div class="container">
 			<div class="intro-text">
 				<div id="slides">
-					<img src="img/Big1.jpg">
-					<img src="img/BigB1.jpg">
-					<img src="img/BigB2.jpg">
-					<img src="img/BigB3.jpg">
-					<img src="img/BigB4.jpg">
+					<img src="img/Big1.jpg" height="100%">
+					<img src="img/BigB1.jpg" height="100%">
+					<img src="img/BigB2.jpg" height="100%">
+					<img src="img/BigB3.jpg" height="100%">
+					<img src="img/BigB4.jpg" height="100%">
 				</div>	
 			</div>
 		</div>
@@ -91,14 +91,14 @@
 
 		<!-- Services Section -->
 		<section id="services" class="services-section">
-		<div class="container" style="height:100%;">
+		<div class="container" >
 			<h1>Services we do</h1>
 		</div>
 		</section>
-		
-		<!-- Services Section -->
+
+		<!-- About Section -->
 		<section id="about" class="about-section">
-		<div class="container" style="height:100%;">
+		<div class="container" >
 			<h1>About Us</h1>
 		</div>
 		</section>
@@ -108,7 +108,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">Contact Us</h2>
+					<h2 class="section-heading">Contact Us Now</h2>
 				</div>
 			</div>
 
@@ -146,13 +146,27 @@
 
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2>Or Visit Us</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12">
+					<div id="map-canvas" ></div>
+				</div>
+			</div>
 		</div>
 		</section>
 
 		<!--Accreditaiton Section-->
 		<section id="accreditation" class="accr-section">
-		<div>
-			<h1>Certificates here</h1>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4"></div>
+				<div class="col-md-4"></div>
+			</div>
 		</div>
 		</section>
 
@@ -204,6 +218,9 @@
 		<!--Slide show-->
 		<script src="js/jquery.slides.min.js"></script>
 		<script src="js/slideSetting.js"></script>
-		
+
+		<!--google map-->
+		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+		<script src="js/googlemap.js"></script>
 	</body>
 </html>
