--- a/thanks.html
+++ b/thanks.html
@@ -13,13 +13,17 @@
 			body {
 				padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 			}
+
+			#slides,
+			.slidesjs-navigation,
+			.slidesjs-pagination{
+				display:none;
+			}
 		</style>
 		<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 		<link href="css/agency.css" rel="stylesheet">
-		<link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-
-
+		<link href="css/font-awesome.min.css" rel="stylesheet">
 
 		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
@@ -69,106 +73,6 @@
 		</div>
 		<!-- /.container-fluid -->
 		</nav>
-
-		<!-- Header -->
-		<header>
-		<div class="container">
-			<div class="intro-text">
-				<div class="intro-heading">Quanta Labs</div>
-				<div class="intro-lead-in">the largest test lab in bay area</div>
-				<a href="#services" class="btn btn-circle page-scroll">
-					<i class="fa fa-angle-double-down animated"></i>
-				</a>
-			</div>
-		</div>
-		</header>
-
-		<!-- Services Section -->
-		<section id="services" class="services-section">
-		<div class="container" >
-			<h1>Services we do</h1>
-		</div>
-		</section>
-
-		<!-- About Section -->
-		<section id="about" class="about-section">
-		<div class="container" >
-			<h1>About Us</h1>
-		</div>
-		</section>
-
-		<!--Contact Section-->
-		<section id="contact" class="contact-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">Contact Us Now</h2>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-lg-12">
-					<form name="sentMessage" id="contactForm" method="post" action="contactengine.php" novalidate>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-									<input type="text" class="form-control" name="Name" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-									<p class="help-block text-danger"></p>
-								</div>
-								<div class="form-group">
-									<input type="email" class="form-control" name="Email" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-									<p class="help-block text-danger"></p>
-								</div>
-								<div class="form-group">
-									<input type="tel" class="form-control" name="Phone" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-									<p class="help-block text-danger"></p>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-									<textarea class="form-control" name="Message" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-									<p class="help-block text-danger"></p>
-								</div>
-							</div>
-							<div class="clearfix"></div>
-							<div class="col-lg-12 text-center">
-								<div id="success"></div>
-								<button type="submit" class="btn btn-xl">Send Message</button>
-							</div>
-						</div>
-					</form>
-
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">Or Visit Us</h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12">
-					<div id="map-canvas" ></div>
-				</div>
-			</div>
-		</div>
-		</section>
-
-		<!--Accreditaiton Section-->
-		<section id="accreditation" class="accr-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-					<img src="img/A2LA 2010 color accredited symbol.jpg" class="img-responsive">
-				</div>
-				<div class="col-md-4">
-					<img src="img/UL.JPG" class="img-responsive">
-				</div>
-				<div class="col-md-4">
-					<img src="img/ISTACertLabLogoColor.jpg" class="img-responsive">
-				</div>
-			</div>
-		</div>
-		</section>
 
 		<footer>
 		<div class="container">
