change background of copy

--- a/testService - Copy.html
+++ b/testService - Copy.html
@@ -86,19 +86,19 @@
 		<header>
 		<div class="container">
 			<div class="intro-text">
-<<<<<<< HEAD
-				<div class="intro-lead-in">Welcome To Quanta!</div>
-				<div class="intro-heading">It's Nice To Meet You</div>
-				<a href="#ESS" class="page-scroll btn btn-xl">Tell Me More</a>
-=======
-				<div id="slides">
+				<div class="intro-heading">Quanta Labs</div>
+				<div class="intro-lead-in">the largest test lab in bay area</div>
+				<a href="#ESS" class="btn btn-circle page-scroll">
+					<i class="fa fa-angle-double-down animated"></i>
+				</a>
+<!--	        <div id="slides">
 					<img src="img/Big1.jpg" height="100%">
 					<img src="img/BigB1.jpg" height="100%">
 					<img src="img/BigB2.jpg" height="100%">
 					<img src="img/BigB3.jpg" height="100%">
 					<img src="img/BigB4.jpg" height="100%">
-				</div>	
->>>>>>> origin/master
+				</div>
+-->
 			</div>
 		</div>
 		</header>
