Revert "Add ESS-test"
This reverts commit 22060180564d0fee4365052c6b2aa0ef9dc0613d.

--- a/testService.html
+++ b/testService.html
@@ -52,26 +52,20 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="hidden"><!--scrolling target-->
+					<li class="hidden">
 					<a href="#page-top">Intro</a>
 					</li>
 					<li>
-					<a class="page-scroll" href="#ESS">ESS,HALT/HASS</a>
+					<a class="page-scroll" href="#services">Services</a>
 					</li>
 					<li>
-					<a class="page-scroll" href="#CHAMBER">CHAMBER TEST</a>
+					<a class="page-scroll" href="#about">About</a>
 					</li>
 					<li>
-					<a class="page-scroll" href="#PACKAGE">PACKAGE TESTING</a>
+					<a class="page-scroll" href="#contact">Contact</a>
 					</li>
 					<li>
-					<a class="page-scroll" href="#SHOCK">SHOCK TEST</a>
-					</li>
-					<li>
-					<a class="page-scroll" href="#VIBRATION">VIBRATION TEST</a>
-					</li>
-					<li>
-					<a class="page-scroll" href="#SPECIAL">SPECIAL TESTING</a>
+					<a class="page-scroll" href="#accreditation">Accerditation</a>
 					</li>
 				</ul>
 			</div>
@@ -79,81 +73,6 @@
 		</div>
 		<!-- /.container-fluid -->
 		</nav>
-		
-		
-		<!-- Header -->
-		<!-- This is the first page with the pictures -->
-		<header>
-		<div class="container">
-			<div class="intro-text">
-				<div class="intro-heading">Quanta Labs</div>
-				<div class="intro-lead-in">the largest test lab in bay area</div>
-				<a href="#ESS" class="btn btn-circle page-scroll">
-					<i class="fa fa-angle-double-down animated"></i>
-				</a>
-<!--	        <div id="slides">
-					<img src="img/Big1.jpg" height="100%">
-					<img src="img/BigB1.jpg" height="100%">
-					<img src="img/BigB2.jpg" height="100%">
-					<img src="img/BigB3.jpg" height="100%">
-					<img src="img/BigB4.jpg" height="100%">
-				</div>
--->
-			</div>
-		</div>
-		</header>
-		
-		
-		<!-- PAGE 2 -->
-		<!-- ESS,HALT/HASS -->
-		<section id="ESS" class="ESS-section">
-		<div class="container" >
-			<h1>ESS,HALT/HASS</h1>
-		</div>
-		</section>
-
-		
-		<!-- PAGE 3 -->
-		<!-- CHAMBER Section -->
-		<section id="CHAMBER" class="CHAMBER-section">
-		<div class="container" >
-			<h1>CHAMBER TEST</h1>
-		</div>
-		</section>
-		
-		
-		<!-- PAGE 4 -->
-		<!-- PACKAGE Section -->
-		<section id="PACKAGE" class="PACKAGE-section">
-		<div class="container" >
-			<h1>PACKAGE TESTING</h1>
-		</div>
-		</section>
-		
-		<!-- PAGE 5 -->
-		<!--SHOCK Section-->
-		<section id="SHOCK" class="SHOCK-section">
-		<div class="container">
-		    <h1>SHOCK TEST</h1>
-		</div>
-		</section>
-		
-		<!-- PAGE 6 -->
-		<!--VIBRATION Section-->
-		<section id="VIBRATION" class="VIBRATION-section">
-		<div class="container">
-		    <h1>VIBRATION TEST</h1>
-		</div>
-		</section>
-		
-		<!-- PAGE 7 -->
-		<!--Special Testing-->
-		<section id="SPECIAL" class="SPECIAL-section">
-		<div class="container">
-		    <h1>SPECIAL TESTING</h1>
-		</div>
-		</section>
-		
 
 		<footer>
 		<div class="container">
