--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-lg-12">
+				<div id="form" class="col-lg-12">
 					<form name="sentMessage" id="contactForm" method="post" novalidate>
 						<div class="row">
 							<div class="col-md-6">
