add form validation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<a class="page-scroll" href="#contact">Contact</a>
 					</li>
 					<li>
-					<a class="page-scroll" href="#accreditation">Accerditation</a>
+					<a class="page-scroll" href="#accreditation">Accreditation</a>
 					</li>
 				</ul>
 			</div>
