delete useless files

--- a/testService -2.html
+++ b/testService -2.html
@@ -236,7 +236,38 @@
 		<!--SHOCK Section-->
 		<section id="SHOCK" class="SHOCK-section">
 		<div class="container">
-		    <h1>SHOCK TEST</h1>
+		    <div class="row">
+                <div class="article span5 ">
+                <h1><Mechanical Shock Testing</h1>
+				<h2>Quanta's Capabilities</h2>
+				<p>● 8 mechanical shock systems and additional<br /> shaker/shock capabilities to choose from<br />
+                   ● Capable of shocks up to 2,000 G's<br />
+                   ● Long duration shock pulse tests<br />
+                   ● Shock Response Spectrum<br />
+                   ● Half Sine Pulse<br />
+                   ● Square Wave Pulse<br />
+                   ● Saw Tooth Pulse<br />
+                   ● Largest table is up to 36&quot; x 36&quot;<br />
+                   ● Repetitive Shock<br />
+                   ● Rotational Shock<br />
+                   ● Temperature and Shock<br />
+                   ● MIL-STD tests</p>
+                </div>
+				<div class="article span5 offset1">
+				</br><img src="img/Mts-shocker.jpg" alt="ESS" class="img-responsive"></div>
+	        </div>
+			</br></br></br></br>
+			<div class="row">
+                <div class="article span5">
+                <h2>Purpose</h2>
+                <p>To provide a degree of confidence that a product can withstand the mechanical shocks encountered in handling, transportation, and service environments. <br /></p>
+                <h2>Quanta's Experience</h2>
+                <p>Quanta has tested many devices for shock effects, from small components to subsystems to entire racks.  We not only perform the testing but also provide expert failure analysis, which has helped hundreds of customers with design changes to solve their problems.<br /><br />
+                   Quanta has also helped in the advancement of shock testing by developing a very accurate and reproducible rotational shock and vibration test system for a wide frequency range and high shock levels.  We also hold a patent for this device (U.S. Patent Numbers 05644087, 05948987)</p>
+				</div>
+				<div class="article span5 offset1">
+				</br><img src="img/Avco-shocker.jpg" alt="ESS" class="img-responsive"></div>
+	        </div><h1>PACKAGE TESTING</h1>
 		</div>
 		</section>
 		
