--- a/testService -2.html
+++ b/testService -2.html
@@ -62,13 +62,19 @@
 					<a class="page-scroll" href="#PACKAGE">PACKAGE</br>TESTING</a>
 					</li>
 					<li>
-					<a class="page-scroll" href="#CHAMBER">CHAMBER</br>TEST</a>
+					<a class="page-scroll" href="#CHAMBER">CHAMBER</br>TESTING</a>
 					</li>
 					<li>
-					<a class="page-scroll" href="#SHOCK">SHOCK</br>TEST</a>
+					<a class="page-scroll" href="#SHOCK">SHOCK</br>TESTING</a>
 					</li>
 					<li>
-					<a class="page-scroll" href="#VIBRATION">VIBRATION</br>TEST</a>
+					<a class="page-scroll" href="#VIBRATION">VIBRATION</br>TESTING</a>
+					</li>
+					<li>
+					<a class="page-scroll" href="#NEBS">NEBS</br>TESTING</a>
+					</li>
+					<li>
+					<a class="page-scroll" href="#BATTERY">BATTERY</br>TESTING</a>
 					</li>
 					<li>
 					<a class="page-scroll" href="#SPECIAL">SPECIAL</br>TESTING</a>
@@ -190,7 +196,7 @@
                 <h2>Purpose</h2>
                 <p>To verify a package can protect the products under various shipping and handling conditions and provide needed fragility data for a product to facilitate an optimum package design.</p>
                 <h2>Quanta's Experience</h2>
-                <p>We work on various product types/sizes to help engineer a package that not only protects the product internals but also is cost effective for actual package cost.  We have acted as an independent evaluator of packages to help many companies make a critical package selection.</p></td>
+                <p>We work on various product types/sizes to help engineer a package that not only protects the product internals but also is cost effective for actual package cost.  We have acted as an independent evaluator of packages to help many companies make a critical package selection.</p>
                 </div>
 				<div class="article span5 offset1">
 				</br><img src="img/drop2.jpg" alt="ESS" class="img-responsive"></div>
@@ -224,11 +230,11 @@
                 <h2>Purpose</h2>
                 <p>To simulate environments, which products could see during operation, transportation and storage, and to verify the robustness of a product's design and manufacturing process.</p>
                 <h2>Quanta's Experience</h2>
-                <p>For the past 20 years, we have tested tens of thousands of products of different sizes under various extreme environments and conditions. Our experience in this area has helped many of our customers pass their environmental tests for their products. Because we have over 30 chambers, we can serve multiple contract manufacturers simultaneously, who need production screening to meet a very tight production schedule.</p></td>
+                <p>For the past 20 years, we have tested tens of thousands of products of different sizes under various extreme environments and conditions. Our experience in this area has helped many of our customers pass their environmental tests for their products. Because we have over 30 chambers, we can serve multiple contract manufacturers simultaneously, who need production screening to meet a very tight production schedule.</p>
                 </div>
 				<div class="article span5 offset1">
 				</br><img src="img/walkin.jpg" alt="ESS" class="img-responsive"></div>
-	        </div><h1>PACKAGE TESTING</h1>
+	        </div>
 		</div>
 		</section>
 		
@@ -238,23 +244,25 @@
 		<div class="container">
 		    <div class="row">
                 <div class="article span5 ">
-                <h1><Mechanical Shock Testing</h1>
+				<h1>Mechanical Shock Testing</h1>
 				<h2>Quanta's Capabilities</h2>
-				<p>● 8 mechanical shock systems and additional<br /> shaker/shock capabilities to choose from<br />
+				<p>● 8 mechanical shock systems and additional<br /> 
+				     shaker/shock capabilities to choose from<br />
                    ● Capable of shocks up to 2,000 G's<br />
                    ● Long duration shock pulse tests<br />
                    ● Shock Response Spectrum<br />
                    ● Half Sine Pulse<br />
                    ● Square Wave Pulse<br />
                    ● Saw Tooth Pulse<br />
-                   ● Largest table is up to 36&quot; x 36&quot;<br />
+                   ● Largest table is up to 36; x 36;<br />
                    ● Repetitive Shock<br />
                    ● Rotational Shock<br />
                    ● Temperature and Shock<br />
                    ● MIL-STD tests</p>
                 </div>
 				<div class="article span5 offset1">
-				</br><img src="img/Mts-shocker.jpg" alt="ESS" class="img-responsive"></div>
+				</br><img src="img/Mts-shocker.jpg" alt="ESS" class="img-responsive">
+				</div>
 	        </div>
 			</br></br></br></br>
 			<div class="row">
@@ -266,8 +274,9 @@
                    Quanta has also helped in the advancement of shock testing by developing a very accurate and reproducible rotational shock and vibration test system for a wide frequency range and high shock levels.  We also hold a patent for this device (U.S. Patent Numbers 05644087, 05948987)</p>
 				</div>
 				<div class="article span5 offset1">
-				</br><img src="img/Avco-shocker.jpg" alt="ESS" class="img-responsive"></div>
-	        </div><h1>PACKAGE TESTING</h1>
+				</br><img src="img/Avco-shocker.jpg" alt="ESS" class="img-responsive">
+				</div>
+	        </div>
 		</div>
 		</section>
 		
@@ -275,19 +284,172 @@
 		<!--VIBRATION Section-->
 		<section id="VIBRATION" class="VIBRATION-section">
 		<div class="container">
-		    <h1>VIBRATION TEST</h1>
+		<div class="row">
+                <div class="article span5 ">
+                <h1>Mechanical Vibration Testing</h1>
+				<h2>Quanta's Capabilities</h2>
+				<p> ● Over 14 shakers on-site to choose from<br />
+                    ● Force ratings up to 17,000 lbs.<br />
+                    ● Large 4'x4' Vibration Table.<br />
+                    ● Sine Sweep<br />
+                    ● Random<br />
+                    ● Sine Dwell<br />
+                    ● Sine on Random<br />
+                    ● Random on Random<br />
+                    ● Sine and Random on Random<br />
+                    ● Resonance search, Track and Dwell<br />
+                    ● Long Stroke up to 14&quot;<br />
+                    ● Frequency range from DC to 3000 hz<br />
+                    ● Temperature over Vibration (see ESS)<br />
+                    ● Transportation tests (see Package Testing)<br />
+                    ● Rotational Vibration<br/>
+                    ● MIL-STD tests</p>
+                </div>
+				<div class="article span5 offset1">
+				</br><br/><br/><br/><br/><br/><br/><br/><img src="img/Shaker.jpg" class="img-responsive"></div>
+	        </div>
+			</br></br></br></br>
+			<div class="row">
+                <div class="article span5">
+				<h2>Purpose</h2>
+				<p>Verify the test unit will function in and withstand the vibration stresses of a product's life cycle and during shipping.</p><br/>
+                <h2>Quanta's Experience</h2>
+				<p>Quanta has tested for the nation's computers, fiber optics, telecommunications, semiconductor, medical, food, aerospace/defense, and other high-tech electronic industries.  Our highly educated staff of engineers is experienced in dealing with many types of test hardware and has helped in solving thousands of problems caused by vibration.</p>
+                </div>
+				<div class="article span5 offset1">
+				</br><img src="img/Rotation_Shaker1.jpg" class="img-responsive"></div>
+	        </div>    
 		</div>
 		</section>
 		
 		<!-- PAGE 7 -->
-		<!--Special Testing-->
-		<section id="SPECIAL" class="SPECIAL-section">
+		<!--NEBS Testing-->
+		<section id="NEBS" class="NEBS-section">
 		<div class="container">
-		    <h1>SPECIAL TESTING</h1>
+		    <div class="row">
+                <div class="article span7">
+				<h1>NEBS Testing</h1>
+				<h2>Quanta's Capabilities</h2>
+                <p>● Capable of handling all NEBS Testing<br />
+                   ● All operational NEBS Testing done on-site<br />
+                   ● Newly installed seismic shaker and state-of-the-art control room<br />
+                   ● Video camera to record all tests<br />
+                   ● Large seismic test system capable of handling heavy telecom racks <br />
+                   ● Quick turnaround on reports, accepted by all major telecom companies<br />
+                   ● Audit approval by UL</p>
+                </div>
+	        </div>
+			</br></br></br></br>
+			<div class="row">
+                <div class="article span5">
+				<h2>Purpose</h2>
+                <p>Demonstrate compliance with Telcordia CR-63 core generic requirements to have a minimum criteria for telecommunication equipment systems for all Central Office and Local Exchange Carriers.</p>
+                </div>
+				<div class="article span5 offset1">
+				</br><img src="img/seisemic_big1.jpg" alt="ESS" class="img-responsive"></div>
+	        </div>
+			</br></br></br></br>
+			<div class="row">
+                <div class="article span5">
+				<h2>Quanta's Experience</h2>
+                <p>Quanta Laboratories has worked with many network equipment and optical equipment companies and several testing partners to provide one-stop NEBS testing and reporting to all the major telecom companies.  Quanta has installed the latest Seismic Test System and a state-of-the-art sound proof control room where you can observe your test in a comfortable environment.</p>
+                </div>
+				<div class="article span5 offset1">
+				</br><img src="img/up_stair-room1.jpg" class="img-responsive"></div>
+	        </div>
 		</div>
 		</section>
 		
-
+        <!-- PAGE 8 -->
+		<!--Battery Testing-->
+		<section id="BATTERY" class="BATTERY-section">
+		<div class="container">
+		    <div class="row">
+                <div class="article span8 ">
+                <h1>Battery Testing In Quanta </h1>
+				<p>Lithium batteries are part of our life now since they are used on products from electrical vechicles to personal devices. To ensure your battery is safe during shipping or during normal use, the battery must pass the UN 38 specification (Transport of Dangerous Goods, Manual of Test and Criteria) requirement for batteries. And in certain cases IEC 62133 &quot; Safety Requirements for Portable Sealed Secondary Cells, and Batteries Made from Them.&quot; Quanta is the lab of choice for most companies in the Bay Area for performing the comprehensive UN38 and IEC 62133 Test Sets. </p>
+                </div>
+			</div>
+			</br></br></br></br>
+			<div class="row">
+                <div class="article span5">
+                <p><strong>UN Spec </strong></p>
+                <p>Altitude Simulation Test<br />
+                   ● Thermal Test<br />
+                   ● Vibration Test<br />
+                   ● Shock Test<br />
+                   ● External Short Circuit Test <br />
+                   ● Overcharge Test<br />
+                   ● Custom Tests from Customer </p>
+			    </div>
+				<div class="article span5 offset1">
+				    <p><strong>IEC62133</strong></p>
+                    <p>●Vibration <br />
+                       ●Moulded case stress at high ambient temperature <br />
+                       ●Temperature cycling <br />
+                       ●External short circuit<br />
+                       ●Free fall<br />
+                       ●Mechanical shock (crash hazard)<br />
+                       ●Thermal abuse <br />
+                       ●Low pressure <br />
+                       ●Overcharge for lithium systems</p><br />
+                     <p>Call us for more detail.408-988-0770</p>
+			    </div>
+	        </div>
+		</div>
+		</section>
+		
+		<!-- PAGE 9 -->
+		<!--Special Testing-->
+		<section id="SPECIAL" class="SPECIAL-section">
+		<div class="container">
+		    <div class="row">
+                <div class="article span5">
+				<h1>Special Test</h1>
+                <h2>Quanta's Capabilities</h2>
+                <p> ● Acoustic Measurement<br />
+                    ● Sound Pressure<br />
+                    ● Sound Power<br />
+                    ● Solar UV Testing<br />
+                    ● Solar/Radiation loading<br />
+                    ● Fiber Optics<br />
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;● Flex<br />
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;● Twist<br />
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;● Side-pull<br />
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;● Cable retention<br />
+                    ● Temperature and Humidity<br />
+                    ● Centrifuge (Acceleration)<br />
+                    ● Salt Spray<br />
+                    ● Chip Temperature Cycling Test - 81XF/sec ramp rate<br />
+                    ● IP Tests, IEC60529 Dust / Water Ingress Test<br /></p>
+			    </div>
+				<div class="article span5 offset1">
+				</br></br></br></br><img src="img/salt.jpg" class="img-responsive"></div>
+	        </div>
+			</br></br></br></br>
+			<div class="row">
+                <div class="article span5">
+				<h2>Purpose</h2>
+                <p>To meet the required specification of adverse conditions with no degradation in product function, appearance, integrity, etc.</p>
+                </div>
+				<div class="article span5 offset1">
+				</br><img src="img/Accousitc__.jpg" alt="ESS" class="img-responsive"></div>
+	        </div>
+			</br></br></br></br>
+			<div class="row">
+                <div class="article span5">
+				<h2>Quanta's Experience</h2>
+                <p>With this variety of special types of test equipment, we are able to test many different products to validate their performance in differing environments.  We have helped companies meet office noise specifications with our acoustic chamber and provide validation for products to survive harsh ocean conditions with our salt spray chamber.  We have also developed in-house fiber optic intensity tests which include the four basic tests of flex, twist, side-pull and cable retention, all computer controlled to validate component fiber physical integrity.</p>
+                </div>
+				<div class="article span5 offset1">
+				</br><img src="img/Solar_Chamber.jpg" class="img-responsive"></div>
+	        </div>
+		</div>
+		</section>
+		
+		
+		
+		
 		<footer>
 		<div class="container">
 			<div class="row">
@@ -340,5 +502,8 @@
 		<!--google map-->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 		<script src="js/googlemap.js"></script>
+	
+		<!--form-->
+		<script src="js/form.js"></script>
 	</body>
 </html>
