add content, fix overflow when using iPhone

--- a/tmp.html
+++ b/tmp.html
@@ -13,12 +13,17 @@
 			body {
 				padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 			}
+
+			#slides,
+			.slidesjs-navigation,
+			.slidesjs-pagination{
+				display:none;
+			}
 		</style>
+		<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 		<link href="css/agency.css" rel="stylesheet">
-		<link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-
-
+		<link href="css/font-awesome.min.css" rel="stylesheet">
 
 		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
@@ -60,7 +65,7 @@
 					<a class="page-scroll" href="#contact">Contact</a>
 					</li>
 					<li>
-					<a class="page-scroll" href="#accreditation">Accreditation</a>
+					<a class="page-scroll" href="#accreditation">Accerditation</a>
 					</li>
 				</ul>
 			</div>
@@ -333,7 +338,6 @@
 				</div>
 			</div>
 		</div>
-		</section>
 
 		<footer>
 		<div class="container">
@@ -390,5 +394,6 @@
 
 		<!--form-->
 		<script src="js/form.js"></script>
+
 	</body>
 </html>
