--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand page-scroll" href="#page-top">
-					<img src="img/Complete Logo.gif" class="img-responsive" style="max-width:200px;margin-top: -20px">
+					<img src="img/Complete Logo.gif" class="img-responsive"/>
 				</a>
 			</div>
 
@@ -99,38 +99,46 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-4 service">
+				<div class="compress">
 					<a>
 						<div class="img-container">
 							<img src="img//whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
+							<div class="hover"></div>
 						</div>
 						<div class="info">
-							<h3 class="seciotn-subheading">ESS, HALT/HASS</h3>	
+							<h3 class="service-title seciotn-subheading">ESS, HALT/HASS</h3>	
 							<p>ESS, HALT/HASS ,
 							Environmental ,
 							Stress Screening</p>
 						</div>
 					</a>
+					</div>
 				</div>
 				<div class="col-sm-4 service">
+								<div class="compress">
+
 					<a>
 						<div class="img-container">	
 							<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 						</div>
 						<div class="info">
-							<h3 class="seciotn-subheading">Chamber, Test</h3>	
+							<h3 class="service-title seciotn-subheading">Chamber, Test</h3>	
 							<p>Temp, Humidity, Altitude,
 							Thermal Shock ,
 							Thermal Cycling</p>
 						</div>
 					</a>
+					</div>
 				</div>
 				<div class="col-sm-4 service">
+								<div class="compress">
+
 					<a>
 						<div class="img-container">
 							<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 						</div>
 						<div class="info">
-							<h3 class="seciotn-subheading">Package Testing</h3>	
+							<h3 class="service-title seciotn-subheading">Package Testing</h3>	
 							<p>Package Testing ,
 							Package Drop ,
 							Package Fragility ,
@@ -138,59 +146,72 @@
 							</p>
 						</div>
 					</a>
+					</div>
 				</div>
 				<div class="col-sm-4 service">
+								<div class="compress">
+
 					<a>
 						<div class="img-container">
 							<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 						</div>
 						<div class="info">	
-							<h3 class="seciotn-subheading">NEBS, TEST</h3>	
+							<h3 class="service-title seciotn-subheading">NEBS, TEST</h3>	
 							<p>NEBS Testing ,
 							Seismic
 							</p>
 						</div>
 					</a>
+					</div>
 				</div>
 				<div class="col-sm-4 service">
+								<div class="compress">
+
 					<a>
 						<div class="img-container">
 							<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 						</div>
 						<div class="info">	
-							<h3 class="seciotn-subheading">Special Testing</h3>
+							<h3 class="service-title seciotn-subheading">Special Testing</h3>
 							<p>Acoustic, Solar ,
 							Testing, Fiber Optics ,
 							and more
 							</p>
 						</div>
 					</a>
+					</div>
 				</div>
 				<div class="col-sm-4 service">
+								<div class="compress">
+
 					<a>
 						<div class="img-container">
 							<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 						</div>
 						<div class="info">	
-							<h3 class="seciotn-subheading">Vibration, TEST</h3>	
+							<h3 class="service-title seciotn-subheading">Vibration, TEST</h3>	
 							<p>Linear and ,
 							Rotational
 							</p>
 						</div>
 					</a>
+					</div>
 				</div>
-				<div class="col-sm-4 service">
+				<div class="col-sm-4 col-lg-offset-4 service">
+								<div class="compress">
+
 					<a>
 						<div class="img-container">
 							<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 						</div>
 						<div class="info">
-							<h3 class="seciotn-subheading">Shock, TEST</h3>	
+							<h3 class="service-title seciotn-subheading">Shock, TEST</h3>	
 							<p>Linear and ,
 							Rotational
 							</p>
 						</div>
 					</a>
+								</div>
 				</div>
 			</div>
 		</div>
@@ -205,30 +226,33 @@
 				</div>
 			</div>
 			<div class="row text-left">
+				<div class="col-lg-6 col-lg-offset-3 ">
+					<img src="img/quantan.jpg" class="group-photo img-responsive"/>
+				</div>
 				<div class="col-lg-12 claim ">
 					<p class="subtitles">
 					Our mission is to provide our customers with fast turnaround and low cost testing and consulting services.
 					</p>
 				</div>
-				<div class="col-lg-6 offset6">
+				<div class="col-lg-4">
 					<h3 class="section-subheading">Proven Experience</h3>
 					<p>
 					For over 20 years, we have supported the product testing requirements of the nation's computer, fiber optics, telecommunications, medical, food, aerospace/defense, and other high-tech electronic industries. Quanta Laboratories is the largest and most experienced independent environmental testing laboratory in Northern California and a recognized provider of environmental stress screening (ESS/HALT/HASS), vibration, shock, temperature/humidity/altitude testing, NEBS/seismic testing, engineered test services and special tests.
 					</p>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-4">
 					<h3 class="section-subheading">Knowledgeable Expertise</h3>
 					<p>
 					Quanta Laboratories holds 3 patents in the areas of Environmental Stress Screening (ESS) and Rotational Shock/Vibration. Our staff is made up of highly trained and degreed engineers (many with a masters or Ph.D.), whose extensive testing experience can help you develop specifications, test, generate needed reports, and provide assistance to locate and correct problems in a product's design.
 					</p>
 				</div>
-				<div class="col-lg-6 offset6">
+				<div class="col-lg-4">
 					<h3 class="section-subheading">Customer Dedication</h3>
 					<p>
 					Quanta Laboratories is dedicated to satisfying our customer's needs. In order to provide a more comfortable environment for our customer, Quanta Laboratories has recently renovated our customer lounge with many added amenities.
 					</p>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-12">
 					<h3 class="section-subheading">Our President</h3>
 					<p>
 					Quanta Laboratories President Dr. Hong-sun Liu, founder of Quanta Laboratories in 1985, received his Ph.D. in Mechanical Engineering from the University of California at Berkeley, and a Masters of Science in Mechanical Engineering from the University of Washington. Dr. Liu brings to Quanta Labs over 30 years of experience in environmental testing. He has extensive experience in research, development and testing of mechanical and electronic devices, theoretical and experimental stress analysis, shock, vibration, and environmental testing and is a writer/contributor to Test Magazine. Over his career, Dr. Liu has developed 4 patents in environmental testing and has established himself as a distinguished engineer in the Silicon Valley. In addition to his industrial experience, Dr. Liu has also taught engineering courses at the University of California at Berkeley and engineering and business courses at San Jose State University. Dr. Liu regularly conducts and teaches Environmental Stress Screening (ESS, HALT, and HASS) seminars.
@@ -390,5 +414,8 @@
 
 		<!--form-->
 		<script src="js/form.js"></script>
+		
+		<!--animation-->
+		<script src="js/animation.js"></script>
 	</body>
 </html>
