--- a/testService.html
+++ b/testService.html
@@ -431,27 +431,27 @@
 										<section id="consulting" class="consultingServices-section">
 										<div class="container">
 											<div class="row">
-												<div class=" col-md-7">
+												<div class=" col-md-6">
 													<h1>Consulting Services</h1>
 													<p>
 														Quanta Laboratories is fully staffed with trained engineering professionals who, in addition to their performing the principle testing activities, are adept at supporting our customer in the selection of the specifications needed to screen their product.
 </p><p>
-Test Program & ESS Program Development - Our experience in developing programs for testing and our patented ESS system can help quickly locate product defects before your customers do.
+<b>Test Program & ESS Program Development</b> - Our experience in developing programs for testing and our patented ESS system can help quickly locate product defects before your customers do.
 </p><p>
-Test Specification Development/Evaluation - We use our experience and extensive collection of specifications to improve your specifications and procedures to save you test time and cost.
+<b>Test Specification Development/Evaluation</b> - We use our experience and extensive collection of specifications to improve your specifications and procedures to save you test time and cost.
 </p><p>
-Design/Fabrication of Test Fixtures - We have designed hundreds of fixtures and can help you design fixtures to meet your product's needs.
+<b>Design/Fabrication of Test Fixtures</b> - We have designed hundreds of fixtures and can help you design fixtures to meet your product's needs.
 </p><p>
-Hardware Structural Evaluation Support - We use our experience to help you correct potential structural weaknesses before starting tests to save time and cost.
+<b>Hardware Structural Evaluation Support</b> - We use our experience to help you correct potential structural weaknesses before starting tests to save time and cost.
 </p><p>
-Failure Analysis - We will help to identify the cause of failure and suggest potential design changes to make your product more robust.
+<b>Failure Analysis</b> - We will help to identify the cause of failure and suggest potential design changes to make your product more robust.
 </p><p>
-Third Party Formal Reports - Hard and soft copy reports, including Certificate of Compliance or Conformance.
+<b>Third Party Formal Reports</b> - Hard and soft copy reports, including Certificate of Compliance or Conformance.
 </p><p>
-Training Seminars - We conduct seminars in ESS, Shock, Vibration, Package Testing, Acoustic Measurements and Noise Reduction.
+<b>Training Seminars</b> - We conduct seminars in ESS, Shock, Vibration, Package Testing, Acoustic Measurements and Noise Reduction.
 													</p>
 												</div>
-												<div class="col-md-4 col-md-offset-1">
+												<div class="col-md-6">
 										          <h2>Papers</h2>
           <ul><li><a class="paper" href="Papers/ESS.pdf" target="_blank">Environmental Stress Screening    1994</a></li>
             <li><a class="paper" href="Papers/ESS_Fixture.pdf" target="_blank">Experimental Skewed ESS Fixture   1994</a></li>
