--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">Contact Us Now</h2>
+					<h2 class="section-heading contact-title">Contact Us Now</h2>
 				</div>
 			</div>
 
@@ -322,95 +322,83 @@
 									<p class="help-block text-danger"></p>
 								</div>
 							</div>
+							<div class="col-md-2 col-md-offset-5 checkbox-input">
+							  	<label>
+							  		<input type="hidden" name="fromUS" value="0" />
+							    	<input type="checkbox" name="fromUS" id="fromUS" value="1" checked />
+									I'm from US.
+								</label>
+							</div>
 							<div class="clearfix"></div>
 							<div class="col-lg-12 text-center">
 								<div id="success"></div>
 								<button type="submit" id="submit" class="btn btn-xl" style="font-size:40px;">
-									<span class="glyphicon glyphicon-envelope"></span> Send
+									<span class="fa fa-envelope"></span> Send
 								</button>
 							</div>
 						</div>
 					</form>
-
+					
 				</div>
-			</div>	
+			</div>
+			<div class="row">
+				<div class="col-lg-12 text-center phone-area">
+					<p class="phone-number">Don't wanna wait? <i class="fa fa-phone"></i> (408) 988-0770</p>
+				</div>
+			</div>
+		</div>		
 		</div>
 		</section>
-
-		<div id="map">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">Or Visit Us</h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12">
-					<div id="map-canvas" ></div>
-				</div>
-			</div>
-			<div class="col-lg-12 text-center">
-				<h3>3199 De La Cruz Blvd. Santa Clara, Ca 95054</h3>
-			</div>
-		</div>
 
 		<!--Accreditaiton Section-->
 		<section id="accreditation" class="accr-section">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
-					<img src="img/A2LA 2010 color accredited symbol.jpg" class="img-responsive">
-					<h4>A2LA Certified</h4>
-					<p>This certifies that the package testing facility listed below has met the requirements for 
-					Certified Laboratory status established by the International Safe Transit Association (ISTA).</p>
-
-
+				<div class="col-md-2 col-md-offset-2">
+					<a href="http://www.a2la.org/">
+						<img class="certificate"  src="img/A2LA 2010 color accredited symbol.jpg" class="img-responsive">
+					</a>
 				</div>
 				<div class="col-md-4">
-					<img src="img/UL.JPG" class="img-responsive">
-					<h4>ISTA Certified</h4>
-					<p>This certifies that the package testing facility listed below has met the requirements for 
-					Certified Laboratory status established by the International Safe Transit Association (ISTA).</p>
+					<a href="http://www.ul.com/global/eng/pages/">
+						<img class="certificate" src="img/UL.JPG" class="img-responsive">
+					</a>
 				</div>
 				<div class="col-md-4">
-					<img src="img/ISTACertLabLogoColor.jpg" class="img-responsive">
-					<h4>UL & Verizon Certified</h4>
-					<p>Underwriters Laboratories Inc., certified as an Independent Test Laboratory (ITL) under the Verizon Independent Testing Laboratories NEBS Testing Certification Program ( NEBS-TCP ), has assessed Quanta Laboratories and has found it to be in conformance with the program requirements for a UL Subcontractor Laboratory ( SCL ). Quanta Laboratories is qualified to perform Underwriters Laboratories' supervised NEBS testing in accordance with the Verizon NEBS Testing Certification Witnessing Program ( NEBS-TCWP ) Requirements.</p>
+					<a href="http://www.ista.org/">
+						<img class="certificate"  src="img/ISTACertLabLogoColor.jpg" class="img-responsive">	
+					</a>
 				</div>
 			</div>
-			<div class="row">
-
-				<div class="col-md-4">
-				</div>
-				<div class="col-md-4">
-
-				</div>
-			</div>
-		</div>
 		</section>
 
 		<footer>
-		<div class="container">
 			<div class="row text-left">
 				<div class="col-md-2 col-md-offset-2">
 					<h5 class="footer-title">Company</h5>
 					<ul class="footer-list">
 						<li>
-						<a>
+						<a class="page-scroll " href="#services">
 							Services
 						</a>
 						</li>
 						<li>
-						<a>
+						<a class="page-scroll " href="#about">
 							About
 						</a>
 						</li>
 						<li>
-						<a>
+						<a class="page-scroll " href="#contact">
 							Contact
 						</a>
 						</li>
 						<li>
-						<a>
+						<a class="page-scroll " href="#map">
+							Find Us
+						</a>
+						</li>
+						<li>
+						<a class="page-scroll " href="#accreditation">
 							Accreditation
 						</a>
 						</li>
@@ -483,19 +471,31 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4 col-md-offset-4">
-					<p>open daily</p>
+				<div class="col-md-2 col-md-offset-5 bulletin">
+					<p>OPEN MON - FRI</p>
 					<p>8:30-18:00</p>
-					<p>(408) 988-0770</p>
+					<p><i class="fa fa-phone"></i> (408) 988-0770</p>
 				</div>
 			</div>
+					
+				<div class="col-lg-12 text-center toggle-map btn">
+					<h2>click <i class="fa fa-map-marker"></i> me</h2>
+				</div>
+				<div class="row">
+					<div class="col-lg-12">
+						<div id="map-container">
+							<h2>3199 De La Cruz Blvd. Santa Clara, Ca 95054</h2>
+							<div id="map-canvas" ></div>
+						</div>
+					</div>
+				</div>
 			<div class="row">
 				<div class="col-md-12">
-					<span class="copyright">&copy; Quanta Laboratories</span>
+					<span class="copyright">Quanta Laboratories &copy; 2014</span>
 				</div>
 				<div class="col-md-12">
 					<ul class="list-inline social-buttons">
-						<li><a href="#"><i class="fa fa-twitter"></i></a>
+						<li><a href="https://plus.google.com/100202547504922984237/about"><i class="fa fa-google-plus"></i></a>
 						</li>
 						<li><a href="https://www.facebook.com/quantalabs"><i class="fa fa-facebook"></i></a>
 						</li>
@@ -503,7 +503,6 @@
 						</li>
 					</ul>
 				</div>
-			</div>
 		</div>
 		</footer>
 
