add cool animation at What we do

--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@
 					<div class="compress">
 						<a href="testService.html#ESS">
 							<div class="img-container">
+								<div class="hover">
+									<div class="btn-primary">learn more</div>
+								</div>
 								<img src="img//whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
-								<div class="hover"></div>
 							</div>
 							<div class="info">
 								<h3 class="service-title seciotn-subheading">ESS, HALT/HASS</h3>	
@@ -115,6 +117,9 @@
 
 						<a href="testService.html#PACKAGE">
 							<div class="img-container">
+								<div class="hover">
+									<div class="btn-primary">learn more</div>
+								</div>
 								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 							</div>
 							<div class="info">
@@ -133,6 +138,9 @@
 
 						<a href="testService.html#CHAMBER">
 							<div class="img-container">	
+								<div class="hover">
+									<div class="btn-primary">learn more</div>
+								</div>
 								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 							</div>
 							<div class="info">
@@ -149,6 +157,9 @@
 
 						<a href="testService.html#SHOCK">
 							<div class="img-container">
+								<div class="hover">
+									<div class="btn-primary">learn more</div>
+								</div>
 								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 							</div>
 							<div class="info">
@@ -165,6 +176,9 @@
 
 						<a href="testService.html#VIBRATION">
 							<div class="img-container">
+								<div class="hover">
+									<div class="btn-primary">learn more</div>
+								</div>
 								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 							</div>
 							<div class="info">	
@@ -181,6 +195,9 @@
 
 						<a href="testService.html#NEBS">
 							<div class="img-container">
+								<div class="hover">
+									<div class="btn-primary">learn more</div>
+								</div>
 								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 							</div>
 							<div class="info">	
@@ -197,6 +214,9 @@
 
 						<a href="testService.html#BATTERY">
 							<div class="img-container">
+								<div class="hover">
+									<div class="btn-primary">learn more</div>
+								</div>
 								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 							</div>
 							<div class="info">	
@@ -212,6 +232,9 @@
 
 						<a href="testService.html#SPECIAL">
 							<div class="img-container">
+								<div class="hover">
+									<div class="btn-primary">learn more</div>
+								</div>
 								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 							</div>
 							<div class="info">	
@@ -229,6 +252,9 @@
 
 						<a >
 							<div class="img-container">
+								<div class="hover">
+									<div class="btn-primary">learn more</div>
+								</div>
 								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
 							</div>
 							<div class="info">
@@ -409,47 +435,47 @@
 					<h5 class="footer-title">Services</h5>
 					<ul>
 						<li>
-						<a>
+						<a href="testService.html#VIBRATION">
 							Vibration Test
 						</a>
 						</li>
 						<li>
-						<a>
+						<a href="testService.html#SHOCK">
 							Shock Test
 						</a>
 						</li>
 						<li>
-						<a>
+						<a href="testService.html#CHAMBER">
 							Chamber Test
 						</a>
 						</li>
 						<li>
-						<a>
+						<a href="testService.html#PACKAGE">
 							Package Test
 						</a>
 						</li>
 						<li>
-						<a>
+						<a href="testService.html#SPECIAL">
 							Special Test
 						</a>
 						</li>
 						<li>
-						<a>
+						<a href="testService.html#ESS">
 							ESS
 						</a>
 						</li>
 						<li>
-						<a>
+						<a href="testService.html#NEBS">
 							NEBS Test
 						</a>
 						</li>
 						<li>
-						<a>
+						<a href="testService.html#BATTERY">
 							Battery Test
 						</a>
 						</li>
 						<li>
-						<a>
+						<a href="testService.html#CONSULTING">
 							Consulting Services
 						</a>
 						</li>
