figure out how jqBootstrapValidation works

--- a/testService.html
+++ b/testService.html
@@ -39,7 +39,7 @@
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right">
+				<ul class="service-nav nav navbar-nav navbar-right">
 					<li class="hidden"><!--scrolling target-->
 					<a href="#page-top">Intro</a>
 					</li>
@@ -119,12 +119,10 @@
 						<h2>Quanta's Patented ESS System</h2>
 						<p>If proper environmental stress screening equipment is used, this is a very effective and economic tool to be applied to the design verification of a new product or to find problem(s) in an existing product. Unfortunately, ESS equipment currently available in the market utilize pneumatic hammers to generate the vibration input to the product. There are several inherent technical drawbacks to pneumatic hammer designs</p>	  
 					</div>
-					<div class="col-md-4"><!--chamber pic-->
-						<img src="img/ESSchamber.jpg" alt="ESS" class="img-responsive">
+					<div class="col-md-5"><!--chamber pic-->
+						<img src="img/ESSchamber.jpg" alt="ESS" class="img-responsive"><br>
 					</div>
-					<div class="col-md-4">
-						<img src="img/ess_fixture.jpg" class="img-responsive">
-					</div>
+					
 				</div> 
 
 				<div class="row">
@@ -134,6 +132,9 @@
 						2. Energy level is too low to be effective for screening in the frequency range at which most products have their resonant frequencies. Also, damaging energy levels occur up to 20,000 Hz.<br />
 						To avoid these problems, Quanta has developed a new ESS system that can be used with any electromagnetic or hydraulic shaker. Its uniqueness justified the award of a U.S. Patent in 1997 (U.S. Patent Number 05650569).<br /></p>
 					</div>	 
+					<div class="col-md-5">
+						<img src="img/ess_fixture.jpg" class="img-responsive">
+					</div>
 				</div>   
 				<div class="row">
 					<div class="col-md-6"><!--small picture down-->
