--- a/index.html
+++ b/index.html
@@ -311,65 +311,55 @@
 		</section>
 
 		<!--Contact Section-->
-		<section id="contact" class="contact-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h2 class="section-heading contact-title">Contact Us Now</h2>
-				</div>
-			</div>
-
-			<div class="row">
-				<div id="form" class="col-lg-12">
-					<form name="sentMessage" id="contactForm" method="post" novalidate>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-									<input type="text" class="form-control" name="Name" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-									<p class="help-block text-danger"></p>
-								</div>
-								<div class="form-group">
-									<input type="email" class="form-control" name="Email" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-									<p class="help-block text-danger"></p>
-								</div>
-								<div class="form-group">
-									<input type="tel" class="form-control" name="Phone" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-									<p class="help-block text-danger"></p>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-									<textarea class="form-control" name="Message" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-									<p class="help-block text-danger"></p>
-								</div>
-							</div>
-							<div class="col-md-2 col-md-offset-5 checkbox-input">
-							  	<label>
-							  		<input type="hidden" name="fromUS" value="0" />
-							    	<input type="checkbox" name="fromUS" id="fromUS" value="1" checked />
-									I'm from US.
-								</label>
-							</div>
-							<div class="clearfix"></div>
-							<div class="col-lg-12 text-center">
+<section id="contact" class="contact-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Contact Us</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form name="sentMessage" id="contactForm" novalidate>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" pattern="^[0-9]{10,}$" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number." data-validation-pattern-message="10 digits needed">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
 								<div id="success"></div>
 								<button type="submit" id="submit" class="btn btn-xl" style="font-size:40px;">
 									<span class="fa fa-envelope"></span> Send
 								</button>
 							</div>
-						</div>
-					</form>
-					
-				</div>
-			</div>
-			<div class="row">
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="row">
 				<div class="col-lg-12 text-center phone-area">
 					<p class="phone-number">Don't wanna wait? <br><i class="fa fa-phone"></i> (408) 988-0770</p>
 				</div>
 			</div>
-		</div>		
-		</div>
-		</section>
+        </div>
+    </section>
 
 		<!--Accreditaiton Section-->
 		<section id="accreditation" class="accr-section">
@@ -537,16 +527,13 @@
 		<script src="js/classie.js"></script>
 		<script src="js/cbpAnimatedHeader.js"></script>
 
-		<!--Slide show-->
-		<script src="js/jquery.slides.min.js"></script>
-		<script src="js/slideSetting.js"></script>
+	    <!-- Contact Form JavaScript -->
+	    <script src="js/jqBootstrapValidation.js"></script>
+	    <script src="js/contact_me.js"></script>
 
 		<!--google map-->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 		<script src="js/googlemap.js"></script>
-
-		<!--form-->
-		<script src="js/form.js"></script>
 
 		<!--animation-->
 		<script src="js/animation.js"></script>
