finish Brad's order and fix some screen size bugs

--- a/testService.html
+++ b/testService.html
@@ -5,8 +5,10 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
-		<meta name="author" content="">
+		<meta name="author" content="KjB">
 
+		<link rel="shortcut icon" href="img/favicon.ico">
+		
 		<!-- Le styles -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/agency.css" rel="stylesheet">
@@ -19,6 +21,7 @@
 		<![endif]-->
 
 	</head>
+
 
 	<body id="page-top">
 		<!-- Navigation -->
@@ -42,6 +45,9 @@
 				<ul class="service-nav nav navbar-nav navbar-right">
 					<li class="hidden"><!--scrolling target-->
 					<a href="#page-top">Intro</a>
+					</li>
+					<li>
+					<a class="page-scroll" href="index.html"><br>home</a>
 					</li>
 					<li>
 					<a class="page-scroll" href="#ESS">ESS</br>HALT/HASS</a>
